--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,6 +4,11 @@ twig:
     # Activation du thème Bootstrap 5 pour les formulaires du site
     form_themes: ['bootstrap_5_layout.html.twig']
 
+    globals:
+
+        site_name: 'Le Blog de Batman'
+
+
 when@test:
     twig:
         strict_variables: true
