--- a/.env
+++ b/.env
@@ -47,3 +47,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=semaphore
 ###< symfony/lock ###
+
+GOOGLE_RECAPTCHA_SITE_KEY=6LdROIUfAAAAAAea1gAma3_Cw7ECdw-lP91FoNCQ
+GOOGLE_RECAPTCHA_PRIVATE_KEY=6LdROIUfAAAAAGFta8u6tEInqme-Gzlvan-DJ9Qb
