Ajout du bundle d'optimisation des images de profil

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 /public/images/profils/*
 !public/images/profils/.gitignore
 ###< exclusions customs ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
